--- a/FRONTEND/cvindex.html
+++ b/FRONTEND/cvindex.html
@@ -5,19 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CV Builder</title>
     <link rel="stylesheet" href="bootstrap.css">
-    
+    <link rel="stylesheet" href="https://use.typekit.net/fuz8kft.css">
   </head>
-  <body>
-  <div class="container">
-      <div class="row">
-        <div class="text-center">
+  
+  <body class="text-center">
+  
+    <div class="footer-container d-flex h-100 p-3 mx-auto flex-column text-left">
+        <header class="header mb-auto">
+            <div class="inner d-flex justify-content-between align-items-center">
+                <img src="test.png" alt="logo" class="header-logo" style="height: 75px;">
+                
+                <nav class="nav nav-header justify-content-end">
+                    <a class="nav-link" href="#">Log in</a>
+                    <a class="nav-link" href="#">Sign up</a>
+                </nav>
+            </div>
+        </header>
+    </div>
+
+    <div class="container d-flex flex-column justify-content-center min-vh-50">
+      <div class="row justify-content-center">
+        <div class="col-12">
           <h2>Make your best resume</h2>
         </div>
       </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-4 offset-4">
+    <div class="row justify-content-center">
+      <div class="col-3">
         <div class="d-grid gap-3">
           <button type="button" class="btn btn-primary btn-block">Start from scratch</button>
           <button type="button" class="btn btn-primary btn-block">Upload your resume</button>
