--- a/FRONTEND/cvindex.html
+++ b/FRONTEND/cvindex.html
@@ -6,38 +6,72 @@
     <title>CV Builder</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="https://use.typekit.net/fuz8kft.css">
+    <style>
+        .container {
+            position: relative;
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url("city.jpg"), rgba(0, 0, 0, 0.5); 
+            background-size: cover;
+            background-position: center;
+            background-blend-mode: darken;
+            border-radius: 10px;
+            z-index: -1;
+        }
+    </style>
   </head>
   
   <body class="text-center">
   
-    <div class="footer-container d-flex h-100 p-3 mx-auto flex-column text-left">
+    <div class="header-container d-flex h-100 p-3 mx-auto flex-column text-left">
         <header class="header mb-auto">
             <div class="inner d-flex justify-content-between align-items-center">
-                <img src="test.png" alt="logo" class="header-logo" style="height: 75px;">
+                <img src="logo.png" alt="logo" class="header-logo" style="height: 69px;">
                 
-                <nav class="nav nav-header justify-content-end">
-                    <a class="nav-link" href="#">Log in</a>
-                    <a class="nav-link" href="#">Sign up</a>
+                <nav class="nav nav-header justify-content-end gap-2">
+                    <button type="button" class="btn btn-secondary btn-block rounded-pill" style="width: 90px;">Sign up</button>
+                    <button type="button" class="btn btn-dark btn-block rounded-pill" style="width: 90px;">Log In</button>
                 </nav>
             </div>
         </header>
+        <hr>
     </div>
-
-    <div class="container d-flex flex-column justify-content-center min-vh-50">
-      <div class="row justify-content-center">
-        <div class="col-12">
-          <h2>Make your best resume</h2>
+    <main>
+        <div class="container d-flex flex-column justify-content-center vh-100" name="cont">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                <h2>Build Your Perfect Resume with AI</h2>
+                <p>Create, Edit, and Download Resumes in Minutes!</p>
+                <br>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+            <div class="col-3">
+                <div class="d-grid gap-3">
+                <button type="button" class="btn btn-secondary btn-block rounded-pill">Start from scratch</button>
+                <button type="button" class="btn btn-dark btn-block rounded-pill">Upload your resume</button>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    <div class="row justify-content-center">
-      <div class="col-3">
-        <div class="d-grid gap-3">
-          <button type="button" class="btn btn-primary btn-block">Start from scratch</button>
-          <button type="button" class="btn btn-primary btn-block">Upload your resume</button>
-        </div>
-      </div>
-    </div>
-  </div>
+    </main>
 
+    <footer class="footer-container mt-auto">
+        <div class="inner">
+            <hr>
+            <p>Resumaker® is a registered trademark of CMM004 Team B 2025</p>
+        </div>
+
+    </footer>
   </body>
 </html>
