--- a/FRONTEND/cvindex.html
+++ b/FRONTEND/cvindex.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CV Builder</title>
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="FRONTEND\css\bootstrap.css">
     <link rel="stylesheet" href="https://use.typekit.net/fuz8kft.css">
     <style>
         .container {
@@ -21,7 +21,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url("city.jpg"), rgba(0, 0, 0, 0.5); 
+            background: url("FRONTEND\assets\city.jpg"), rgba(0, 0, 0, 0.5); 
             background-size: cover;
             background-position: center;
             background-blend-mode: darken;
@@ -36,7 +36,7 @@
     <div class="header-container d-flex h-100 p-3 mx-auto flex-column text-left">
         <header class="header mb-auto">
             <div class="inner d-flex justify-content-between align-items-center">
-                <img src="logo.png" alt="logo" class="header-logo" style="height: 69px;">
+                <img src="FRONTEND\assets\logo.png" alt="logo" class="header-logo" style="height: 69px;">
                 
                 <nav class="nav nav-header justify-content-end gap-2">
                     <button type="button" class="btn btn-secondary btn-block rounded-pill" style="width: 90px;">Sign up</button>
