--- a/FRONTEND/cvindex.html
+++ b/FRONTEND/cvindex.html
@@ -68,6 +68,10 @@
                       <label class="form-label">Password</label>
                       <input type="password" class="form-control" id="password" required> 
                     </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="confirmPassword">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirmPassword"  required>
+                      </div>
                     <button type="submit" class="btn btn-primary w-100">Sign Up</button>
                   </form>
             </div>
