Added JS log out function that directs back to index page
Corrected HTML to allow for this, and took away redundent parts of code

--- a/FRONTEND/loginindex.html
+++ b/FRONTEND/loginindex.html
@@ -41,7 +41,7 @@
                 
                 <nav class="nav nav-header justify-content-end gap-2">
                    
-                    <button type="button" class="btn btn-dark rounded-pill" data-bs-toggle="modal" data-bs-target="#loginModal" style="width: 90px;">Log Out</button>
+                    <button type="button" class="btn btn-dark rounded-pill" onclick="logout()" style="width: 90px;">Log Out</button>
                 </nav>
             </div>
         </header>
