--- a/FRONTEND/cvindex.html
+++ b/FRONTEND/cvindex.html
@@ -6,7 +6,7 @@
     <title>CV Builder</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="https://use.typekit.net/fuz8kft.css">
-    <!-- Style contains in-page css for background picture and mask to darken image  -->
+    <!-- Style contains in-page css for background picture and mask to darken image, cant seem to get it to work in regular css  -->
     <style>  
         .container {
             position: relative;
@@ -33,7 +33,6 @@
   </head>
   
   <body class="text-center">
-  
     <div class="header-container d-flex h-100 p-3 mx-auto flex-column text-left">
         <header class="header mb-auto">
             <div class="inner d-flex justify-content-between align-items-center">
@@ -131,5 +130,4 @@
 
   <script src="./Js/auth.js"></script>
   <script src="./Js/main.js"></script>
-
 </html>
