Fixed frontend issues in `auth.js` and `cvbuilder.js` by wrapping code in `DOMContentLoaded` event listeners. - Added checks for missing form elements and ensured proper error handling. - Updated `auth_Middleware.js` to handle token validation correctly. - Added debugging logs to verify token storage and resume data submission. - Updated `cvbuilder.js` to handle form submission and resume data saving. - Resolved issues with token validation and resume saving functionality. - Updated resume data structure to include additional fields and handle form submission.

--- a/FRONTEND/cvbuilder.html
+++ b/FRONTEND/cvbuilder.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -129,7 +130,15 @@
           <!-- Personal Statement Preview -->
           <section id="previewPersonalStatement">
             <h2>Personal Statement</h2>
-            <p id="previewStatement">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porttitor, ipsum eget accumsan dignissim, ex diam maximus lectus, ac pharetra leo elit vel dolor. Aenean vel mi eu nibh maximus maximus. Integer dictum eu nibh vitae bibendum. Vivamus eget nibh hendrerit, finibus sapien vel, ultrices urna. Praesent nec turpis eget ex efficitur ullamcorper facilisis ut diam. Aliquam ligula leo, bibendum vitae viverra a, facilisis quis urna. Pellentesque vitae bibendum magna. Morbi feugiat augue id nisi laoreet, ut volutpat quam viverra. Nullam accumsan vehicula nisi sit amet auctor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam gravida ex id magna fringilla porttitor at non nisl. Aliquam erat odio, consequat ut mauris in, faucibus egestas metus. Aenean a finibus tellus.</p>
+            <p id="previewStatement">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porttitor, ipsum
+              eget accumsan dignissim, ex diam maximus lectus, ac pharetra leo elit vel dolor. Aenean vel mi eu nibh
+              maximus maximus. Integer dictum eu nibh vitae bibendum. Vivamus eget nibh hendrerit, finibus sapien vel,
+              ultrices urna. Praesent nec turpis eget ex efficitur ullamcorper facilisis ut diam. Aliquam ligula leo,
+              bibendum vitae viverra a, facilisis quis urna. Pellentesque vitae bibendum magna. Morbi feugiat augue id
+              nisi laoreet, ut volutpat quam viverra. Nullam accumsan vehicula nisi sit amet auctor. Class aptent taciti
+              sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam gravida ex id magna fringilla
+              porttitor at non nisl. Aliquam erat odio, consequat ut mauris in, faucibus egestas metus. Aenean a finibus
+              tellus.</p>
           </section>
           <!-- Education Preview -->
           <section id="previewEducation">
@@ -147,7 +156,7 @@
             <div class="work-entry">
               <h3 id="previewCompany">Company</h3>
               <p class="date">
-                <span id="previewStartDate">Start Date</span> – 
+                <span id="previewStartDate">Start Date</span> –
                 <span id="previewEndDate">End Date</span>
               </p>
               <h4 id="previewJobTitle">Job Title</h4>
@@ -175,4 +184,5 @@
   <script src="./Js/cvbuilder.js"></script>
   <script src="./Js/auth.js"></script>
 </body>
+
 </html>
