--- a/FRONTEND/template.html
+++ b/FRONTEND/template.html
@@ -22,9 +22,7 @@
         <!-- Product Card 1 -->
         <div class="product-card">
           <div class="product-image">
-            <img
-              src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%23ddd'/%3E%3Cpath d='M35 45h30v10H35z' fill='%23bbb'/%3E%3Ccircle cx='50' cy='35' r='10' fill='%23bbb'/%3E%3C/svg%3E"
-              alt="Product placeholder" />
+            <img src="./assets/template1.jpg"/>
           </div>
           <h2 class="product-name">Template 1</h2>
           <button class="add-to-cart">Select</button>
