--- a/FRONTEND/loginindex.html
+++ b/FRONTEND/loginindex.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ResumeMaker</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="https://use.typekit.net/fuz8kft.css">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+ <!-- Bootstrap CSS -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+ <!-- Font Awesome for icons -->
+ <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+ <!-- Google Fonts -->
+ <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+ <!-- Custom CSS -->
+ <link rel="stylesheet" href="./css/main.css">
+ <link rel="stylesheet" href="./css/pages/loginindex.css">
+</head>
   </head>
   <body>
     <div class="container">
