--- a/FRONTEND/template1.html
+++ b/FRONTEND/template1.html
@@ -5,8 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume Builder - Template 1</title>
-  <link rel="stylesheet" href="./css/templates/template1.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/pages/template1.css">
 </head>
 
 <body>
@@ -205,7 +212,7 @@
   </div>
 
   <!-- Resume List Modal -->
-  <div class="modal fade" id="resumeListModal" tabindex="-1" aria-labelledby="resumeListModalLabel" aria-hidden="true">
+  <div class="modal fade" id="resumeListModal" tabindex="-1" aria-labelledby="resumeListModalLabel">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
@@ -221,7 +228,6 @@
       </div>
     </div>
   </div>
-
   <!-- HTML Templates for dynamic content -->
   <!-- Experience Entry Template -->
   <template id="experience-entry-template">
@@ -414,11 +420,13 @@
       <div class="empty-state-text">Error message goes here</div>
     </div>
   </template>
+<!-- Include Bootstrap for modals -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Include Bootstrap for modals -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Include your improved JavaScript file -->
-  <script defer src="./Js/templates/template1.js"></script>
+<!-- Include authentication functionality -->
+<script src="./Js/auth.js"></script>
+
+<!-- Include Template1 specific JavaScript -->
+<script src="./Js/templates/template1.js"></script>
 </body>
-
 </html>
