few edits on the logo

--- a/FRONTEND/loginindex.html
+++ b/FRONTEND/loginindex.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ResumeMaker</title>
+    <title>ResuMaker</title>
  <!-- Bootstrap CSS -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
  <!-- Font Awesome for icons -->
@@ -20,7 +20,7 @@
       <header class="app-header balanced-header">
         <div class="header-wrap">
           <div class="logo">
-            <h1>Resume<span>Maker</span></h1>
+            <h1>Resu<span>Maker</span></h1>
           </div>
           <nav class="header-nav">
             <span class="user-welcome">Welcome, <span id="user-name">User</span></span>
