--- a/FRONTEND/my-resumes.html
+++ b/FRONTEND/my-resumes.html
@@ -19,7 +19,7 @@
       <header class="app-header balanced-header">
         <div class="header-wrap">
           <div class="logo">
-            <h1>Resume<span>Maker</span></h1>
+            <h1>Resu<span>Maker</span></h1>
           </div>
           <nav class="header-nav">
             <span class="user-welcome">Welcome, <span id="user-name">User</span></span>
