--- a/FRONTEND/template.html
+++ b/FRONTEND/template.html
@@ -21,7 +21,7 @@
       <header class="app-header balanced-header">
         <div class="header-wrap">
           <div class="logo">
-            <h1>Resume<span>Maker</span></h1>
+            <h1>Resu<span>Maker</span></h1>
           </div>
           <div class="template-header-text">
             <h2>Choose a Template</h2>
