--- a/FRONTEND/template1.html
+++ b/FRONTEND/template1.html
@@ -21,7 +21,7 @@
     <!-- Original Header with Navigation -->
     <header class="app-header">
       <div class="logo">
-        <h1>Resume<span>Maker</span></h1>
+        <h1>Resu<span>Maker</span></h1>
       </div>
       <nav class="header-nav">
         <button class="btn btn-outline" id="back-to-templates-btn">
