--- a/FRONTEND/template2.html
+++ b/FRONTEND/template2.html
@@ -19,7 +19,7 @@
     <header class="balanced-header">
         <div class="header-wrap">
             <div class="logo">
-                <h1>Resume<span>Builder</span></h1>
+                <h1>Resu<span>Builder</span></h1>
             </div>
             <div class="header-nav">
                 <div class="user-welcome">Welcome, User</div>
