--- a/FRONTEND/test.html
+++ b/FRONTEND/test.html
@@ -21,7 +21,7 @@
     <header class="app-header">
       <div class="header-content d-flex justify-content-between align-items-center">
         <div class="logo">
-          <h1>Resume<span>Maker</span></h1>
+          <h1>Resu<span>Maker</span></h1>
         </div>
 
         <nav class="header-nav">
@@ -67,7 +67,7 @@
             <div class="auth-form-container">
               <div class="auth-header text-center">
                 <h4>Create Account</h4>
-                <p class="text-muted">Join ResumeMaker today</p>
+                <p class="text-muted">Join ResuMaker today</p>
               </div>
 
               <form id="signupForm">
