--- a/FRONTEND/editor.html
+++ b/FRONTEND/editor.html
@@ -18,7 +18,7 @@
   <div class="container">
     <header class="app-header">
       <div class="logo">
-        <h1>Resume<span>Maker</span></h1>
+        <h1>Resu<span>Maker</span></h1>
       </div>
       <nav class="header-nav">
         <button onclick="templatepage()" class="btn btn-outline">
